# confluence-openapi-tool

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: cli.py  confluence_client.py  main.py  server.py
confluence_openapi_tool/: cli.py  server.py
