[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-openapi-tool"
version = "0.1.0"
description = "Minimal FastAPI wrapper for Confluence Cloud"
authors = [{name = "Wenlin-AI"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "typer",
]

[project.scripts]
confluence-openapi-tool = "confluence_openapi_tool.cli:entrypoint"
