[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-openapi-tools-server"
version = "0.1.0"
description = "Minimal FastAPI wrapper for Confluence Cloud"
authors = [{name = "Wenlin-AI"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "typer",
    "requests>=2.32.4",
    "html2text>=2025.4.15",
]

[project.scripts]
confluence-openapi-tools-server = "app.cli:entrypoint"

